Update Environment.java